# spotifyiv2

./: Cargo.toml
audio/: Cargo.toml
audio/src/: decrypt.rs
audio/src/fetch/: mod.rs  receive.rs
connect/: Cargo.toml
connect/src/: config.rs  lib.rs  spirc.rs
contrib/: Dockerfile  Dockerfile.Rpi  librespot.service  librespot.user.service
core/: Cargo.toml  build.rs
core/src/: authentication.rs  cdn_url.rs  component.rs  date.rs  file_id.rs  lib.rs  packet.rs  session.rs  spotify_id.rs  token.rs  version.rs
core/src/connection/: mod.rs
core/tests/: connect.rs
discovery/: Cargo.toml
discovery/examples/: discovery.rs
discovery/src/: lib.rs  server.rs
metadata/: Cargo.toml
metadata/src/: album.rs  artist.rs  availability.rs  content_rating.rs  copyright.rs  episode.rs  external_id.rs  image.rs  lib.rs  lyrics.rs  request.rs  restriction.rs  sale_period.rs  show.rs  track.rs  util.rs  video.rs
metadata/src/audio/: file.rs  item.rs
metadata/src/playlist/: annotation.rs  attribute.rs  diff.rs  item.rs  list.rs  operation.rs  permission.rs
playback/: Cargo.toml
playback/src/: lib.rs
playback/src/audio_backend/: gstreamer.rs  jackaudio.rs  portaudio.rs
playback/src/decoder/: mod.rs  passthrough_decoder.rs  symphonia_decoder.rs
playback/src/mixer/: mappings.rs
protocol/: Cargo.toml
src/: lib.rs  main.rs  player_event_handler.rs
