[package]
name = "spotifyiv2-connect"
version = "0.5.0-dev"
rust-version = "1.61"
authors = ["Paul Lietar <paul@lietar.net>"]
description = "The discovery and Spotify Connect logic for spotifyiv2"
license = "MIT"
repository = "https://github.com/spotifyiv2-org/spotifyiv2"
edition = "2021"

[dependencies]
form_urlencoded = "1.0"
futures-util = "0.3"
log = "0.4"
protobuf = "3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "parking_lot", "sync"] }
tokio-stream = "0.1"

[dependencies.spotifyiv2-core]
path = "../core"
version = "0.5.0-dev"

[dependencies.spotifyiv2-playback]
path = "../playback"
version = "0.5.0-dev"

[dependencies.spotifyiv2-protocol]
path = "../protocol"
version = "0.5.0-dev"
